# mysql_dump_anonymizer

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  main.py  models.py  pyproject.toml
dump_anonymizer/: cli.py
mysql_dump_anonymizer/: main.py  models.py
